[package]
name = "fast_imdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
reqwest = { version = "0.11", features = ["json"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
scraper = "0.13.0"
